Fix model paths in planets.json and config.json to ensure correct loading

--- a/src/routes/Orrery/globals/config.json
+++ b/src/routes/Orrery/globals/config.json
@@ -118,7 +118,7 @@
         "phaColor": [1, 0, 0],
         "cometColor": [0, 0.7890625, 0.92578125],
         "asteroidColor": [0.5859375, 0.5859375, 0.5859375],
-        "defaultModel": "./sac25/models/asteroid.glb"
+        "defaultModel": "/sac25/models/asteroid.glb"
     },
     "supabase": {
         "url": "https://krywglbrlhpjlqwmupon.supabase.co",
