--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mapbox/tile-cover": "^3.0.2",
     "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.3.0",
+    "mapbox-gl": "^3.15.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.3",
