--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@mapbox/tile-cover": "^3.0.2",
+    "@mapbox/tilebelt": "^2.0.2",
     "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.3.0",
     "mapbox-gl": "^3.15.0",
