Refactor SmallBodies component to simplify color calculation and remove unused trajectory properties from config

--- a/src/routes/Orrery/globals/config.json
+++ b/src/routes/Orrery/globals/config.json
@@ -131,11 +131,7 @@
             "page": 1,
             "pageSize": 100,
             "query": "",
-            "group": "all",
-            "kind": "all",
-            "numberedState": "all",
-            "asteroidClasses": [],
-            "cometClasses": []
+            "asteroidClasses": []
         },
         "asteroidClasses": [
             {
